--- a/ink-in-time.ini
+++ b/ink-in-time.ini
@@ -1,6 +1,6 @@
 [uwsgi]
 user-home = project-user-home-here
-prj = meet-me-free
+prj = ink-in-time
 pp = /path/to/project
 
 # make sure paths exist
