change timezone display. Fix static assets. Clean up UI.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       - smtpdebug
     # entrypoint: /entrypoint.sh
     volumes:
-      - ./config/iit.yml:/app/iit.yml
+      - ./config/iit-debug.yml:/app/iit.yml
     
   # No debugging
   iit:
