refactor into itt package. start to create a compiler structure.

--- a/Pipfile
+++ b/Pipfile
@@ -37,6 +37,9 @@ beautifulsoup4 = "*"
 python-environ = "*"
 cachetools = "*"
 gunicorn = "*"
+sqlalchemy = "*"
+celery = "*"
+psycopg2 = "*"
 
 [dev-packages]
 pipfile-requirements = "*"
