--- a/config/iit.example.yml
+++ b/config/iit.example.yml
@@ -12,6 +12,10 @@ scheduling:
       label: 1 Hour
       time: 60
       icon: <i class="bi bi-circle-fill"></i>
+  # Reasons for setting the appointment.
+  reasons:
+    con: "Initial Consultation"
+    up: "Project Update"
   # Grace period in timedelta dict
   grace_period:
     hours: 6
@@ -23,7 +27,7 @@ scheduling:
     end:
       hour: 18
       minute: 00
-  view_duration:
+  view_window:
     days: 60
 database:
   # sqlite file
