--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,7 +56,7 @@ services:
   
   db:
     image: postgres:15.1-alpine
-    container_name: db
+    container_name: iitdb
     restart: always
     ports:
       - 5432:5432
