work on the tasks some more.

--- a/Pipfile
+++ b/Pipfile
@@ -41,6 +41,7 @@ sqlalchemy = "*"
 celery = "*"
 psycopg2 = "*"
 sqlalchemy-migrate = "*"
+etebase = "*"
 
 [dev-packages]
 pipfile-requirements = "*"
