add views unittest. work on refactoring for views.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "casual": "^1.6.2",
+    "dayjs": "^1.11.7",
+    "express": "^4.18.2",
+    "ics": "^2.41.0",
     "node-mock-server": "^0.25.4"
   }
 }
